--- a/package.json
+++ b/package.json
@@ -8,66 +8,62 @@
     "lint": "vue-cli-service lint",
     "tsc": "tsc --sourcemap --lib es2019,dom"
   },
-  "dependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+  "dependencies": {},
+  "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.10.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@fortawesome/fontawesome-free": "^5.13.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-regular-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/vue-fontawesome": "^0.1.9",
+    "@fortawesome/fontawesome-free": "^5.13.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-brands-svg-icons": "^5.13.1",
+    "@fortawesome/free-regular-svg-icons": "^5.13.1",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/vue-fontawesome": "^0.1.10",
     "@types/facebook-pixel": "0.0.20",
     "@types/gulp": "^4.0.6",
-    "@types/sharp": "^0.24.0",
-    "@types/webpack": "^4.41.10",
-    "@types/webpack-bundle-analyzer": "^2.13.3",
-    "@types/webpack-chain": "^5.2.0",
-    "@types/webpack-dev-server": "^3.10.1",
-    "@types/workbox-webpack-plugin": "^5.0.0",
+    "@types/sharp": "^0.25.0",
+    "@types/webpack": "^4.41.17",
+    "@types/webpack-bundle-analyzer": "^3.8.0",
+    "@types/webpack-dev-server": "^3.11.0",
+    "@types/workbox-webpack-plugin": "^5.1.1",
     "@types/zenscroll": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
-    "@vue/eslint-config-airbnb": "^5.0.2",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
+    "@vue/cli-plugin-pwa": "^4.4.6",
+    "@vue/cli-plugin-typescript": "^4.4.6",
+    "@vue/cli-service": "^4.4.6",
+    "@vue/eslint-config-airbnb": "^5.1.0",
+    "@vue/eslint-config-typescript": "^5.0.2",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "browserslist": "^4.11.1",
-    "caniuse-lite": "^1.0.30001038",
-    "core-js": "^3.6.4",
-    "dayjs": "^1.8.23",
-    "fast-deep-equal": "^3.1.1",
-    "jsdoc": "^3.6.3",
+    "browserslist": "^4.12.0",
+    "caniuse-lite": "^1.0.30001088",
+    "core-js": "^3.6.5",
+    "dayjs": "^1.8.28",
+    "eslint": "^7.3.1",
+    "eslint-plugin-vue": "^6.2.2",
+    "fast-deep-equal": "^3.1.3",
+    "lint-staged": "^10.2.11",
     "numeric-range": "^1.0.4",
     "register-service-worker": "^1.7.1",
-    "sharp": "^0.25.2",
+    "sharp": "^0.25.4",
     "style-resources-loader": "^1.3.3",
-    "terser-webpack-plugin": "^2.3.5",
-    "ts-loader": "^6.2.2",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
+    "terser-webpack-plugin": "^3.0.6",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.5",
     "vue": "^2.6.11",
-    "vue-async-computed": "^3.8.2",
     "vue-class-component": "^7.2.3",
     "vue-cli-plugin-style-resources-loader": "^0.1.4",
     "vue-cli-plugin-webpack-bundle-analyzer": "^2.0.0",
-    "vue-property-decorator": "^8.4.1",
-    "vue-router": "^3.1.6",
+    "vue-property-decorator": "^9.0.0",
+    "vue-router": "^3.3.4",
+    "vue-template-compiler": "^2.6.11",
     "vuejs-datepicker": "^1.6.2",
-    "vuex": "^3.1.3",
-    "webpack-bundle-analyzer": "^3.6.1",
+    "vuex": "^3.4.0",
+    "webpack-bundle-analyzer": "^3.8.0",
     "zenscroll": "^4.0.2"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.2.3",
-    "@vue/cli-plugin-eslint": "^4.2.3",
-    "@vue/cli-plugin-pwa": "^4.2.3",
-    "@vue/cli-plugin-typescript": "^4.3.0",
-    "@vue/cli-service": "^4.2.3",
-    "@vue/eslint-config-typescript": "^5.0.2",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "lint-staged": "^10.1.1",
-    "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2",
-    "typescript": "^3.8.3",
-    "vue-template-compiler": "^2.6.11"
   }
 }
